# binn-ir

./: .gitignore  .run-tests.args  Cargo.toml  README.md  version-info.md
src/: __.rs  cmp.rs  cmp_integers.rs  container_functions.rs  decoder.rs  decoding_functions.rs  encoder.rs  encoding_functions.rs  error.rs  functions.rs  int_ordering.rs  lib.rs  specification.rs  storage.rs  tmp.rs  types.rs  value.rs  value_enum.rs  version_info.rs
src/value_enum/: impls.rs
src/value_enum/impls/: blob.rs  bool.rs  list.rs  map.rs  null.rs  numbers.rs  object.rs  strings.rs
tests/: cmp.rs  cmp_integers.rs  crate_version.rs  int_ordering.rs  storage.rs  value.rs
