# License: see LICENSE file at root directory of `master` branch

[package]
name = "binn-ir"
version = "0.8.0"
authors = ["Hai Bison <haibison.apps@gmail.com>"]
description = "An implementation of Binn - https://github.com/liteserver/binn"
repository = "https://bitbucket.org/haibison/binn-ir/"
license-file = "LICENSE"
keywords = ["binn", "implementation"]
categories = ["data-structures", "encoding"]
