# License: see LICENSE file at root directory of `master` branch

[package]
edition = '2018'
name = 'binn-ir'
version = '0.14.2'
authors = ['Hai Bison <haibison.apps@gmail.com>']
description = 'An implementation of Binn - https://github.com/liteserver/binn'
repository = 'https://bitbucket.org/haibison/binn-ir'
license-file = 'LICENSE'
keywords = ['binn', 'implementation']
categories = ['data-structures', 'encoding']

[features]
std = []

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
kib = '3'
